<resources>
    <string name="app_name">Tournant Scheduling</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="web_api_key">AIzaSyBH8oX2s6zWXWGBdY9j1ayv5bCDn43FEdc</string>
    <string name="tournant_id">tournant-b7e7f</string>
    <string name="database_url">https://console.firebase.google.com/u/0/project/tournant-b7e7f/database/firestore/data~2FRestaurants~2F5mdH2jfEJgHyvSZ67457</string>
    <string name="availability">Availability</string>
    <string name="messages">Messages</string>
    <string name="request_time_off">Request Time Off</string>
    <string name="settings">Settings</string>
    <string name="create_schedule">Create Schedule</string>
    <string name="monday">Monday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="change">Change</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="reason">Reason</string>
    <string name="request">Request</string>
    <string name="month">Month</string>
    <string name="date">Date</string>
    <string name="weekday">Weekday</string>
    <string name="time">Time</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="welcome">Welcome</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="address">Address</string>
    <string name="your_name">Your Name</string>
    <string name="create">Create</string>
    <string name="next">Next</string>
    <string name="zip_code">Zip Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_info">Your Info</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="manage_staff">Manage Staff</string>
    <string name="employee_info">Employee Info</string>
    <string name="done">Done</string>
    <string name="out">Out</string>
    <string name="in">In</string>
    <string name="password_format">Password must contain Uppercase, lowercase, and numeric values.</string>
    <string name="name">Name: </string>
    <string name="zip">Zip</string>
    <string name="confirm">Confirm</string>
    <string name="employee_name">Employee Name</string>
    <string name="phone">Phone</string>
    <string name="city">City</string>
    <string name="type_message">Type message</string>
    <string name="others_working">Others Working:</string>
    <string name="scheduled_time">Scheduled Time:</string>
    <string name="no_schedule_posted">No Schedule Posted</string>
    <string name="reset_password">Reset Password</string>
    <string name="send_email">Send Email</string>
    <string name="update">Update</string>
    <string name="update_employee_info">Update Employee Info</string>
    <string name="section">Section</string>
    <string name="manager">Manager</string>
    <string name="delete">Delete</string>
    <string name="send">Send</string>
    <string name="company_message">Company Message</string>
    <string name="approved">Approved</string>
    <string name="staff_time_off">Staff Time Off</string>
    <string name="your_time_off">Your Time Off</string>
    <string name="pending">Pending</string>
    <string name="tuesday">Tuesday</string>
    <string name="not_working">Not Working</string>

    <string-array name="availability_options">
        <item name="Available">Available</item>
        <item name="None">None</item>
        <item name="Mornings">Mornings</item>
        <item name="Nights">Nights</item>
    </string-array>

    <string-array name="section_strings">
        <item name="Floor">Floor</item>
        <item name="Bar">Bar</item>
        <item name="Kitchen">Kitchen</item>
        <item name="Managers">Managers</item>
    </string-array>
    <string-array name="state_list">
        <item>AL</item>
        <item>AR</item>
        <item>AZ</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>DC</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>

    </string-array>
</resources>
