<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.arcane.tournantscheduling.Frags.CreateAccountSecondFrag">

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.arcane.tournantscheduling.Frags.EmployeeProfileEditFrag">

    <TextView
        android:id="@+id/textView_your_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryText"
        android:text="@string/update_employee_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_employee_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_space_content_areas"
        android:ems="10"
        android:inputType="textCapWords"
        android:hint="@string/employee_name"
        app:layout_constraintStart_toEndOf="@id/Textview_name"
        app:layout_constraintTop_toBottomOf="@+id/textView_your_info"
        />

    <TextView
        android:id="@+id/Textview_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="@dimen/start_end_margin"
        android:text="@string/name"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintBottom_toBottomOf="@+id/editText_employee_name"
        app:layout_constraintStart_toStartOf="parent" />
    <EditText
        android:id="@+id/editText_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_space_content_areas"
        android:ems="10"
        android:inputType="textCapWords"
        android:hint="@string/address"
        app:layout_constraintStart_toEndOf="@id/Textview_address"
        app:layout_constraintTop_toBottomOf="@+id/editText_employee_name"/>
    <TextView
        android:id="@+id/Textview_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="@dimen/start_end_margin"
        android:text="@string/address"
        app:layout_constraintBottom_toBottomOf="@+id/editText_address"
        app:layout_constraintStart_toStartOf="parent" />
    <EditText
        android:id="@+id/editText_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_space_content_areas"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textCapWords"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@id/textview_city"
        app:layout_constraintTop_toBottomOf="@+id/editText_address" />
    <TextView
        android:id="@+id/textview_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="@dimen/start_end_margin"
        android:text="@string/city"
        app:layout_constraintBottom_toBottomOf="@+id/editText_city"
        app:layout_constraintStart_toStartOf="parent" />
    <EditText
        android:id="@+id/editText_zip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_space_content_areas"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/zip_code"
        app:layout_constraintStart_toEndOf="@id/textview_zip"
        app:layout_constraintTop_toBottomOf="@+id/editText_city" />
    <TextView
        android:id="@+id/textview_zip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="@dimen/start_end_margin"
        android:text="@string/zip"
        app:layout_constraintBottom_toBottomOf="@+id/editText_zip"
        app:layout_constraintStart_toStartOf="parent" />
    <EditText
        android:id="@+id/editText_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_space_content_areas"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        app:layout_constraintStart_toEndOf="@id/textview_email"
        app:layout_constraintTop_toBottomOf="@+id/editText_zip" />
    <TextView
        android:id="@+id/textview_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="@dimen/start_end_margin"
        android:text="@string/email"
        app:layout_constraintBottom_toBottomOf="@+id/editText_email"
        app:layout_constraintStart_toStartOf="parent" />
    <EditText
        android:id="@+id/editText_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_space_content_areas"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phone_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@id/textview_phone"
        app:layout_constraintTop_toBottomOf="@+id/editText_email" />
    <TextView
        android:id="@+id/textview_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="@dimen/start_end_margin"
        android:text="@string/phone"
        app:layout_constraintBottom_toBottomOf="@+id/editText_phone"
        app:layout_constraintStart_toStartOf="parent" />
    <Spinner
        android:id="@+id/spinner_state"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="@dimen/start_end_margin"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/editText_city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_city" />

    <Button
        android:id="@+id/button_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_space_content_areas"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/update"
        android:textColor="@color/colorIcons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_section" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch_manager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="@dimen/start_end_margin"
        android:text="@string/manager"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_section"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinner_section"
        app:layout_constraintTop_toTopOf="@+id/spinner_section" />

    <Spinner
        android:id="@+id/spinner_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_end_margin"
        android:layout_marginTop="8dp"
        android:entries="@array/section_strings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/subtitle_text_size"
        android:textStyle="bold"
        android:textColor="@color/colorSecondaryText"
        android:layout_marginStart="@dimen/start_end_margin"
        android:layout_marginTop="@dimen/vertical_space_content_areas"
        android:text="@string/section"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_phone" />

</android.support.constraint.ConstraintLayout>
</ScrollView>