<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arcane.tournantscheduling.Frags.CreateAccountFrag">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.arcane.tournantscheduling.Frags.CreateAccountFrag">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_space_content_areas"
            android:text="@string/welcome"
            android:textStyle="bold"
            android:textSize="@dimen/title_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText_employee_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_end_margin"
            android:layout_marginTop="@dimen/vertical_space_content_areas"
            android:ems="10"
            android:hint="@string/restaurant_name"
            android:inputType="textCapWords"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Textview_name" />

        <TextView
            android:id="@+id/Textview_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_space_content_areas"
            android:layout_marginStart="@dimen/start_end_margin"
            android:text="@string/name"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editText_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_space_content_areas"
            android:layout_marginStart="@dimen/start_end_margin"
            android:ems="10"
            android:inputType="textCapWords"
            android:hint="@string/address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Textview_address"/>
        <TextView
            android:id="@+id/Textview_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_space_content_areas"
            android:layout_marginStart="@dimen/start_end_margin"
            android:text="@string/address"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/editText_employee_name"
            app:layout_constraintStart_toStartOf="parent" />
        <EditText
            android:id="@+id/editText_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_space_content_areas"
            android:layout_marginStart="@dimen/start_end_margin"
            android:ems="10"
            android:hint="@string/city"
            android:inputType="textCapWords"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_city" />
        <TextView
            android:id="@+id/textview_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_end_margin"
            android:text="@string/city"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/editText_address"
            app:layout_constraintStart_toStartOf="parent" />
        <EditText
            android:id="@+id/editText_zip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_space_content_areas"
            android:layout_marginStart="@dimen/start_end_margin"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/zip_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_zip" />
        <TextView
            android:id="@+id/textview_zip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_space_content_areas"
            android:layout_marginStart="@dimen/start_end_margin"
            android:text="@string/zip"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/editText_city"
            app:layout_constraintStart_toStartOf="parent" />


        <EditText
            android:id="@+id/editText_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_space_content_areas"
            android:layout_marginStart="@dimen/start_end_margin"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_phone" />
        <TextView
            android:id="@+id/textview_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_space_content_areas"
            android:layout_marginStart="@dimen/start_end_margin"
            android:text="@string/phone"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/editText_zip"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorIcons"
            android:layout_marginTop="@dimen/vertical_space_content_areas"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_phone" />

        <Spinner
            android:id="@+id/spinner_state"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="@dimen/start_end_margin"
            android:layout_marginTop="8dp"
            android:entries="@array/state_list"
            app:layout_constraintBottom_toBottomOf="@+id/editText_city"
            app:layout_constraintStart_toEndOf="@+id/editText_city"
            app:layout_constraintTop_toTopOf="@+id/editText_city" />

    </android.support.constraint.ConstraintLayout>



</ScrollView>


